k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo-ns
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
